# SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning

./: README.md
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/: LICENSE  Makefile  README.md  config.py  pyproject.toml  requirements.txt
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/docs/: mkdocs.yml
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/docs/docs/: index.md
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/notebooks/: 1.0--initial_data_exploration.ipynb  2.0--data_quality.ipynb  analisis_estadistico.ipynb  exploracion_inicial_datos.ipynb
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/references/: data_cleaning_decisions.md  data_dictionary_draft.md
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/reports/: profiling_report.html
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/salarlens_predictor/: __init__.py  config.py  dataset.py  features.py  plots.py
SalaryLens-Predictor-de-Retorno-Laboral-con-Machine-Learning/salarlens_predictor/modeling/: predict.py  train.py
